# wren

./: .env.example  .gitignore  AGENTS.md  LEARNINGS.md  Makefile  README.md  docker-compose.yml
.agents/: map.md  (+3 more)
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: escalation.py  graph.py  inspection.py  knowledge.py  order_status.py  price_gate.py  quoting.py  recommendation.py  spotlight.py  state.py  supervisor.py  tools.py
backend/app/api/: chat.py  conversations.py  dashboards.py  escalations.py  knowledge.py  onboarding.py  platform.py  pricing.py  public.py  tenants.py
backend/app/core/: auth.py  config.py  db.py  limits.py  migrate.py
backend/app/ingestion/: chunker.py  embedder.py  pipeline.py
backend/app/llm/: azure.py  dependency.py  embedder.py  openai_compat.py  provider.py
backend/app/observability/: cost.py  tracing.py
backend/app/onboarding/: flow.py
backend/app/pricing/: engine.py  validation_gate.py
backend/app/retrieval/: dense.py  dependency.py  fuse.py  rerank.py  service.py  sparse.py  types.py
backend/evals/: generation_eval.py  injection_eval.py  judge_calibration.py  leakage_eval.py  retrieval_eval.py  run_gate.py  trajectory_dataset.py  trajectory_eval.py
backend/evals/datasets/: injection_set.jsonl  judge_calibration.jsonl  tenant1_generation.jsonl  tenant1_retrieval.jsonl  tenant1_trajectory.jsonl
backend/migrations/: 0001_extensions.sql  0002_roles.sql  0003_tenancy.sql  0004_knowledge.sql  0005_conversations.sql  0006_commerce.sql  0007_operations.sql  0008_eval_cost.sql  0009_auth_lookup.sql  0010_embedding_dim.sql  0011_escalations_dedupe.sql  0012_messages_metadata.sql  0013_platform_admin_tenant_config_write.sql
backend/seeds/: seed_demo.py  seed_injection_probe.py  seed_leakage_pair.py  seed_tenant1_phoneshop.py  seed_tenant2_dental.py  supabase_keys.py
backend/tests/: conftest.py  fakes.py  test_agent_graph.py  test_agent_tools.py  test_auth_api.py  test_chat_api.py  test_chunker.py  test_conversations_api.py  test_cost.py  test_dashboards_api.py  test_escalation_agent.py  test_escalations_api.py  test_fuse.py  test_generation_eval_metrics.py  test_generation_eval_run.py  test_health.py  test_injection_eval.py  test_inspection.py  test_judge_calibration_metrics.py  test_judge_calibration_run.py  test_knowledge_agent.py  test_knowledge_api.py  test_leakage.py  test_limits.py  test_limits_api.py  test_migrate_render.py  test_migrations.py  test_onboarding_api.py  test_onboarding_flow.py  test_order_status_agent.py  test_platform_api.py  test_pricing_api.py  test_pricing_engine.py  test_public_api.py  test_quoting_agent.py  test_recommendation_agent.py  test_rerank_normalization.py  test_retrieval.py  test_retrieval_eval_metrics.py  test_rls.py  (+10 more)
(+108 files in other folders)
