[project]
name = "wren-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10",
    "openai>=2.45.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.15.21",
    "asyncpg-stubs>=0.30.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
# Session-scoped async fixtures must not await after yield (they run on the first
# requesting test's function-scoped loop); see tests/conftest.py.
asyncio_default_fixture_loop_scope = "function"
markers = ["db: tests that require a live Postgres (docker compose up -d db)"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]
