[project]
name = "wren-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10",
    "openai>=2.45.0",
    "python-multipart>=0.0.32",
    "pypdf>=6.14.2",
    "pgvector>=0.5.0",
    "langgraph>=1.2.9",
]

[dependency-groups]
# T-035: sentence-transformers pulls in torch (~100MB+), fine for dev but far
# too heavy for the 0.25vCPU/0.5GB Fargate task. It lives in its own group,
# installed by default locally and in CI (default-groups below) so the local
# EMBEDDER/RERANKER dev stack keeps working unchanged - only the production
# image opts out (backend/Dockerfile: --no-group local-ml), which is why the
# ECS task definition binds EMBEDDER/RERANKER to hosted providers.
local-ml = [
    "sentence-transformers>=5.6.0",
]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.15.21",
    "asyncpg-stubs>=0.30.0",
    "hypothesis>=6.156.6",
]

[tool.uv]
default-groups = ["dev", "local-ml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
# Session-scoped async fixtures must not await after yield (they run on the first
# requesting test's function-scoped loop); see tests/conftest.py.
asyncio_default_fixture_loop_scope = "function"
markers = ["db: tests that require a live Postgres (docker compose up -d db)"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests", "seeds", "evals"]
